2007-07-08  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_button.cpp,
	* gameswf/gameswf_sprite.cpp: fixed one more _width & _heigth bug
	* gameswf/plugins/lib3ds/gameswf_3ds.cpp: typo
	* gameswf/samples/test_bound.fla,
	* gameswf/samples/test_bound.swf: added testcase for _width & _heigth
	* gameswf/samples/test_delete.fla,
	* gameswf/samples/test_delete.swf: a bit cleanup

2007-07-07  Thatcher Ulrich <tu@tulrich.com>
	We don't use non-const references --> fix character::get_bound(),
	matrix::transform(rect*), matrix::transform_by_inverse(rect*)
	Added some convenience methods to rect.
	A few whitespace edits.
	* gameswf/*
	* gameswf/Makefile: add as_broadcaster to the build

2007-07-05  Vitaly Alexeev <tishka92@yahoo.com>

	Fixed the hack, added erase(), push_back() & size() methods
	* gameswf/gameswf_as_classes/as_array.h,
	* gameswf/gameswf_as_classes/as_array.cpp
	Implemented AsBroadcaster
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_as_classes/as_broadcaster.cpp: new
	* gameswf/gameswf_as_classes/as_broadcaster.h: new
	* gameswf/gameswf_object.h: protected addProperty method
	* gameswf/gameswf_value.cpp: fixed operator== of as_value() for OBJECT
	Testcase for AsBroadcaster
	* gameswf/samples/test_broadcaster.fla
	* gameswf/samples/test_broadcaster.swf
	* gameswf/win32/VC8/gameswf.vcproj: updated
	* NEWS: updated

2007-07-04  Thatcher Ulrich <tu@tulrich.com>
	* gameswf/gameswf_sound_handler_sdl.h: Small compile fix.

2007-07-04  Thatcher Ulrich <tu@tulrich.com>
	Implemented the remaining String methods.  Fixed the String method
	dispatch.  Made test_string much more comprehensive and fixed a
	bunch of corner cases.

2007-07-03  Vitaly Alexeev <tishka92@yahoo.com>

	Fixed a some sound bugs that show one's worth
	when sound driver is not installed
	* gameswf/gameswf.h
	* gameswf/gameswf_impl.cpp
	* gameswf/gameswf_sound.cpp
	* gameswf/gameswf_sound_handler_sdl.cpp
	* gameswf/gameswf_sound_handler_sdl.h
