@@ -27,8 +27,7 @@ namespace gameswf
 		as_object() : m_prototype(NULL)
 		{
 			set_member("addProperty", as_object_addproperty);
-			as_prop_flags f(true, true, true);
-			set_member_flags("addProperty", f.get_flags());
+			set_member_flags("addProperty", as_prop_flags::DONT_ENUM);
 		}
 
 		as_object(as_object_interface* proto) : m_prototype(proto)
